增加SaaS当前会话撤销
